; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_properties_destroy.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_properties_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i32 (i64)*, %struct.obs_property* }
%struct.obs_property = type { %struct.obs_property* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_properties_destroy(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca %struct.obs_property*, align 8
  %4 = alloca %struct.obs_property*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %6 = icmp ne %struct.TYPE_4__* %5, null
  br i1 %6, label %7, label %42

7:                                                ; preds = %1
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 2
  %10 = load %struct.obs_property*, %struct.obs_property** %9, align 8
  store %struct.obs_property* %10, %struct.obs_property** %3, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 1
  %13 = load i32 (i64)*, i32 (i64)** %12, align 8
  %14 = icmp ne i32 (i64)* %13, null
  br i1 %14, label %15, label %28

15:                                               ; preds = %7
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %28

20:                                               ; preds = %15
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 1
  %23 = load i32 (i64)*, i32 (i64)** %22, align 8
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = call i32 %23(i64 %26)
  br label %28

28:                                               ; preds = %20, %15, %7
  br label %29

29:                                               ; preds = %32, %28
  %30 = load %struct.obs_property*, %struct.obs_property** %3, align 8
  %31 = icmp ne %struct.obs_property* %30, null
  br i1 %31, label %32, label %39

32:                                               ; preds = %29
  %33 = load %struct.obs_property*, %struct.obs_property** %3, align 8
  %34 = getelementptr inbounds %struct.obs_property, %struct.obs_property* %33, i32 0, i32 0
  %35 = load %struct.obs_property*, %struct.obs_property** %34, align 8
  store %struct.obs_property* %35, %struct.obs_property** %4, align 8
  %36 = load %struct.obs_property*, %struct.obs_property** %3, align 8
  %37 = call i32 @obs_property_destroy(%struct.obs_property* %36)
  %38 = load %struct.obs_property*, %struct.obs_property** %4, align 8
  store %struct.obs_property* %38, %struct.obs_property** %3, align 8
  br label %29

39:                                               ; preds = %29
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %41 = call i32 @bfree(%struct.TYPE_4__* %40)
  br label %42

42:                                               ; preds = %39, %1
  ret void
}

declare dso_local i32 @obs_property_destroy(%struct.obs_property*) #1

declare dso_local i32 @bfree(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
